Default RTSP timeout is not used
VLC will send keep-alives if the RTSP server explicitly specifies a session timeout:
Session: 12345;timeout=30
but no keep-alives are sent if the default timeout is indicated implicitly
Session: 12345
The default timeout in the RTSP spec is 60 seconds (RFC2326 section 12.37).
Possibly related tickets are #329 (closed) and #595 (closed).