Default RTSP timeout value is 60 seconds, rather than never - closes #1163